Revert "refactor(deploy): standardize production on Kubernetes"
This reverts commit afa83691da8d7d1995c1b892d9dc37931282267e.
